--- a/src/MongoLab/project.json
+++ b/src/MongoLab/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
@@ -8,7 +8,8 @@
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
-    }
+    },
+    "MongoDB.Driver": "2.3.0-beta1"
   },
 
   "frameworks": {
